cargo-features = ["codegen-backend"]
[package]
name = "vn_record"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
duct = "1.1.0"
global-hotkey = "0.7.0"
iced = { version = "0.13.1", features = ["image", "tokio"] }
open = "5.3.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", default-features = false, features = ["time"] }
xcap = "0.7.0"

[profile.dev]
debug = 0
codegen-backend = "cranelift"
