cargo-features = ["codegen-backend"]
[package]
name = "vn_record"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
duct = "1.1.1"
global-hotkey = "0.7.0"
iced = { version = "0.14.0", features = ["image", "tokio", "hot"] }
open = "5.3.3"
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = ["time"] }
xcap = "0.8.0"

[profile.dev]
debug = 0
codegen-backend = "cranelift"
